busybox-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox
  namespace: maybank-prod
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: busybox
