busybox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busybox-ingress
  namespace: maybank-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - example.com
      secretName: example-com-tls
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: busybox
                port:
                  number: 80
